--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body {
     color: #fff;
     text-align: center;
     font-size: 20px;
-    font-family: 'Dosis';
+    font-family: 'Fredoka', sans-serif;
     padding-top: 5%;
     word-wrap: break-word;
 }
@@ -40,4 +40,32 @@ body {
 a, a:hover {
     color: #e66;
     text-decoration: underline;
+}
+
+.e {
+    font-family: 'Fredoka One', cursive;
+    font-size: 60px;
+    color: #6CC4A1;
+    margin-top: 20px;
+}
+
+.n {
+    font-family: 'Fredoka One', cursive;
+    font-size: 60px;
+    color: #F9ED69;
+    margin-top: 20px;
+}
+
+.j {
+    font-family: 'Fredoka One', cursive;
+    font-size: 60px;
+    color: #F08A5D;
+    margin-top: 20px;
+}
+
+.i {
+    font-family: 'Fredoka One', cursive;
+    font-size: 60px;
+    color: #B83B5E;
+    margin-top: 20px;
 }
